# toy-external-events

./: Cargo.toml  README.md
embeddable/: Cargo.toml
embeddable/src/: bindings.rs  http.rs  lib.rs
embeddable/src/bindings/: cli.rs  clocks.rs  filesystem.rs  http.rs  random.rs
embeddable/wit/: world.wit
embedding/: Cargo.toml
embedding/src/: bindings.rs  clock.rs  ctx.rs  http.rs  job.rs  lib.rs  noop_waker.rs  runtime.rs  streams.rs
embedding/src/bindings/: cli.rs  clocks.rs  filesystem.rs  http.rs  random.rs
embedding/wit/: world.wit
guest/: Cargo.toml
guest/src/: main.rs
src/: lib.rs  main.rs
wit/: world.wit
