[workspace]
members = [ "guest", "embeddable", "embedding" ]

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", branch = "pch/wasmtime_bindgen_nostd", default-features = false }
wasmtime-wasi-io = { git = "https://github.com/bytecodealliance/wasmtime", branch = "pch/wasmtime_bindgen_nostd", default-features = false }
futures-lite = { version = "2.6", default-features = false }
bytes = { version = "1", default-features = false }
embeddable = { path = "embeddable" }
embedding = { path = "embedding" }
pin-project-lite = "0.2.8"


[package]
name = "toy-external-events"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
wasmtime = { workspace = true, features = ["cranelift"] }
embedding.workspace = true
